--- a/INSTALL
+++ b/INSTALL
@@ -30,6 +30,11 @@ cd psychopy
 python setup.py install
 cd
 
+cd
+git clone git@github.com:glfw/glfw.git
+cd glfw
+cmake .
+
 #git clone git@github.com:mjgreen/gating.git
 #cd gating/
 #git config credential.helper store # if we are using https instead of ssh
