--- a/INSTALL
+++ b/INSTALL
@@ -8,7 +8,7 @@ sudo apt install libportmidi-dev
 sudo apt install liblo-dev
 sudo apt install libjack-jackd2-dev 
 
-sudo apt install xscreensaver build-essential libsndfile1-dev portaudio19-dev libportmidi-dev liblo-dev libjack-jackd2-dev libosmesa6-dev
+sudo apt install xscreensaver build-essential libsndfile1-dev portaudio19-dev libportmidi-dev liblo-dev libjack-jackd2-dev cmake xorg-dev
 
 cd
 sh Downloads/Anaconda3-2019.03-Linux-x86_64.sh
