--- a/INSTALL
+++ b/INSTALL
@@ -1,15 +1,6 @@
-sudo apt update
-sudo apt upgrade
-sudo apt install xscreensaver
-sudo apt install build-essential
-sudo apt install libsndfile1-dev
-sudo apt install portaudio19-dev
-sudo apt install libportmidi-dev
-sudo apt install liblo-dev
-sudo apt install libjack-jackd2-dev 
-
-sudo apt install xscreensaver build-essential libsndfile1-dev portaudio19-dev libportmidi-dev liblo-dev libjack-jackd2-dev \
-cmake xorg-dev libglfw3-dev
+sudo apt install xscreensaver 
+sudo apt install libsndfile1-dev portaudio19-dev libportmidi-dev liblo-dev libjack-jackd2-dev
+sudo apt install libglfw3-dev
 
 cd
 sh Downloads/Anaconda3-2019.03-Linux-x86_64.sh
@@ -31,10 +22,20 @@ cd psychopy
 python setup.py install
 cd
 
-cd
-git clone git@github.com:glfw/glfw.git
-cd glfw
-cmake .
+pip uninstall pyglet
+#Uninstalling pyglet-1.4.0b1:
+#  Would remove:
+#    /home/matt/anaconda3/lib/python3.7/site-packages/pyglet-1.4.0b1-py3.7.egg
+#Proceed (y/n)? y
+#  Successfully uninstalled pyglet-1.4.0b1
+pip install pyglet
+#Collecting pyglet
+#  Downloading https://files.pythonhosted.org/packages/1c/fc/dad5eaaab68f0c21e2f906a94ddb98175662cc5a654eee404d59554ce0fa/pyglet-1.3.2-py2.py3-none-any.whl (1.0MB)
+#    100% |████████████████████████████████| 1.0MB 7.0MB/s 
+#Requirement already satisfied: future in /home/matt/anaconda3/lib/python3.7/site-packages (from pyglet) (0.17.1)
+#Installing collected packages: pyglet
+#Successfully installed pyglet-1.3.2
+pip install glfw
 
 #git clone git@github.com:mjgreen/gating.git
 #cd gating/
