added wget urls

--- a/INSTALL
+++ b/INSTALL
@@ -1,22 +1,18 @@
-sudo apt install xscreensaver 
-sudo apt install libsndfile1-dev portaudio19-dev libportmidi-dev liblo-dev libjack-jackd2-dev
-sudo apt install libglfw3-dev
+sudo apt install xscreensaver # to prevent getting frozen out by ubuntustudio
+sudo apt install libsndfile1-dev portaudio19-dev libportmidi-dev liblo-dev libjack-jackd2-dev # pyo dependencies
+sudo apt install libglfw3-dev # glfw windowing backend for psychopy, if wanted
 
-cd
-sh Downloads/Anaconda3-2019.03-Linux-x86_64.sh
-cd
+wget https://repo.anaconda.com/archive/Anaconda3-2019.03-Linux-x86_64.sh
+sh Anaconda3-2019.03-Linux-x86_64.sh
 
-cd
-pip install Downloads/wxPython-4.0.4-cp37-cp37m-linux_x86_64.whl
-cd
+wget https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-18.04/wxPython-4.0.4-cp37-cp37m-linux_x86_64.whl
+pip install wxPython-4.0.4-cp37-cp37m-linux_x86_64.whl
 
-cd
 git clone git@github.com:belangeo/pyo.git
 cd pyo
 python setup.py install --use-jack --use-double
 cd
 
-cd
 git clone git@github.com:psychopy/psychopy.git
 cd psychopy
 python setup.py install
