--- a/INSTALL
+++ b/INSTALL
@@ -3,6 +3,9 @@ sudo apt install libsndfile1-dev portaudio19-dev libportmidi-dev liblo-dev libja
 sudo apt install libglfw3-dev # glfw windowing backend for psychopy, if wanted
 sudo apt install ubuntu-gnome-desktop # fixed 'no sound coming out despite all signs indicating everything was working'
 
+# use gdm3 as window manager
+# select "Gnome on X11" from login screen
+
 wget https://repo.anaconda.com/archive/Anaconda3-2019.03-Linux-x86_64.sh
 sh Anaconda3-2019.03-Linux-x86_64.sh
 
