--- a/INSTALL
+++ b/INSTALL
@@ -2,6 +2,7 @@ sudo apt install xscreensaver # to prevent getting frozen out by ubuntustudio
 sudo apt install libsndfile1-dev portaudio19-dev libportmidi-dev liblo-dev libjack-jackd2-dev # pyo dependencies
 sudo apt install libglfw3-dev # glfw windowing backend for psychopy, if wanted
 sudo apt install ubuntu-gnome-desktop # fixed 'no sound coming out despite all signs indicating everything was working'
+sudo apt install jackd2
 
 # use gdm3 as window manager
 # select "Gnome on X11" from login screen
